Re-enable scrollbars to prevent jumpy dialogs for  now

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -6,5 +6,3 @@
   font-weight: normal;
 }
 
-html { overflow-y: auto !important}
-
